# astronav

./: Cargo.toml  README.md
src/: lib.rs
src/coords/: mod.rs  noaa_sun.rs  struct_types.rs  sun.rs
src/coords/star/: mod.rs
src/time/: mod.rs
tests/: alt_az_conversions.rs  sun_rise_and_set.rs  time_functions.rs
