[package]
name = "astronav"
version = "0.1.0"
edition = "2021"
description = "A rust library featuring algorithms for positional astronomy calculations"
authors = ["Venkatesh Omkaram"]
notices = ["Copyright (c) 2024 Venkatesh Omkaram"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/omkarium/astronav"
homepage = "https://github.com/omkarium/astronav"
readme = "README.md"
keywords = ["astronomy"]
categories = ["astronomy"]
rust-version = "1.69.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
